--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "imalat-model-edu",
-  "version": "0.1.0",
+  "name": "imalat-model-edu-iter2",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,6 +11,8 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "next-mdx-remote": "^5.0.0",
+    "gray-matter": "^4.0.3"
   }
 }
